syntax = "proto3";

service ProductService {
    rpc GetAll (Empty) returns (ProductList) {};
    rpc Get (ProductRequestId) returns (Product) {};
    rpc Insert (Product) returns (Product) {};
    rpc Update (Product) returns (Product) {};
    rpc Remove (ProductRequestId) returns (Empty) {};
}

message Empty {}

message Product {
    string id = 1;
    string name = 2;
    string brand = 3;
    int32 amount = 4;
    bool isBought = 5;
}

message ProductList {
    repeated Product products = 1;
}

message ProductRequestId {
    string id = 1;
}